Set up basic Circle CI configuration (#2)
With linting and testing for now. Tightened the linter a bit to not even
allow warnings, and fixed the one warning that we had.

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "bootstrap": "npm install && lerna exec npm install",
     "build": "lerna run build",
     "clean": "lerna run clean",
-    "lint": "eslint packages",
+    "lint": "eslint packages --max-warnings=0",
     "lint:fix": "eslint packages --fix",
     "test": "lerna run test",
     "link": "lerna link --force-local",
