Fix checksum of regl-worldview-deps in CircleCI config (#4)
Thanks Jacob for catching this. I did this incorrectly in
b261ccbc6cfff18754865bdd5af4ae7c48bd165e.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 
       - restore_cache:
           keys:
-          - regl-worldview-deps-{{ checksum "package-lock.json" }}
+          - regl-worldview-deps-{{ checksum "packages/regl-worldview/package-lock.json" }}
           - regl-worldview-deps-
 
       - run: npm run bootstrap
