--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,7 @@
     "react-live": "^1.12.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.1.1",
     "react-virtualized-select": "^3.1.3",
     "seedrandom": "^2.4.4",
     "styled-components": "^4.1.2"
@@ -39,5 +39,11 @@
     "extract-loader": "^3.1.0",
     "prettier": "1.15.2",
     "raw-loader": "^0.5.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
