--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "private": true,
   "devDependencies": {
     "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^4.0.4",
-    "@storybook/addon-knobs": "^4.0.9",
-    "@storybook/addon-links": "^4.0.4",
-    "@storybook/addons": "^4.0.4",
-    "@storybook/react": "^4.0.4",
+    "@storybook/addon-actions": "^4.0.12",
+    "@storybook/addon-knobs": "^4.0.12",
+    "@storybook/addon-links": "^4.0.12",
+    "@storybook/addons": "^4.0.12",
+    "@storybook/react": "^4.0.12",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
@@ -32,7 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "^0.86.0",
+    "flow-bin": "^0.88.0",
     "flow-copy-source": "^2.0.2",
     "flow-mono-cli": "^1.4.3",
     "flow-typed": "^2.5.1",
@@ -43,12 +42,10 @@
     "lodash": "^4.17.11",
     "polygon-generator": "^1.1.2",
     "prettier": "1.15.2",
-    "react": "^16.6.0",
+    "react": "^16.7.0-alpha.2",
     "react-container-dimensions": "^1.4.1",
-    "react-dom": "^16.6.0",
-    "react-test-renderer": "^16.6.0",
-    "regl": "^1.3.9",
-    "reselect": "^4.0.0",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-test-renderer": "^16.7.0-alpha.2",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^4.0.3",
@@ -59,13 +56,13 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.3",
     "rollup-plugin-replace": "^2.1.0",
-    "seedrandom": "^2.4.4",
-    "styled-components": "^3.3.0"
+    "seedrandom": "^2.4.4"
   },
   "dependencies": {},
   "scripts": {
     "bootstrap": "npm install && lerna exec npm install",
     "build": "lerna run build",
+    "watch": "lerna run watch --parallel",
     "clean": "lerna run clean",
     "lint": "eslint packages --max-warnings=0",
     "lint:fix": "eslint packages --fix",
@@ -87,10 +84,6 @@
       "prettier --write",
       "git add"
     ]
-  },
-  "babel-loader-lerna-cra": {
-    "imports": "packages/comp-*/src",
-    "apps": "packages/app-*"
   },
   "workspaces": [
     "packages/*"
