Add npm files and install regl-worldview as docs dependency (#6)

--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -5,6 +5,13 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.esm.js",
+  "files": [
+    "src",
+    "dist",
+    "LICENSE",
+    "README.md",
+    "package.json"
+  ],
   "scripts": {
     "build": "rollup -c",
     "build:watch": "rollup -c --watch",
