--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-virtualized-select": "^3.1.3",
+    "regl-worldview": "0.0.1",
     "seedrandom": "^2.4.4",
     "styled-components": "^4.1.2"
   },
