Make docs work again (#11)
Removed a bunch of unnecessary stuff, and brought in the
webpack.config.js from our proprietary repo, slightly modified. We’ll
have to do some work later to deduplicate this code, but this will do
for now.

This will set us up to easily move more file into this open source repo.

Also renamed all the doc files to use the `.mdx` extension, to
differentiate them from the `.md` extension for which we want to use
the `raw-loader` (in code that is not present in this repo yet). And
added a period between the numbers and document title, while I was at
it. :-)

Test plan: verified that this works locally.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@mdx-js/loader": "^0.16.4",
-    "@mdx-js/mdx": "^0.16.4",
+    "@mdx-js/loader": "^0.16.6",
+    "@mdx-js/mdx": "^0.16.6",
     "@storybook/addon-actions": "^4.0.12",
     "@storybook/addon-knobs": "^4.0.12",
     "@storybook/addon-links": "^4.0.12",
@@ -95,6 +95,7 @@
     "lint:fix": "eslint . --fix && prettier --write '**/*.css' --ignore-path .eslintignore",
     "test": "NODE_ENV=test jest --config jest/jest.config.js",
     "link": "lerna link --force-local",
+    "docs": "webpack-dev-server",
     "update-version": "lerna publish --skip-git --skip-npm --force-publish '*'",
     "check-packages": "yarn clean && yarn compile && yarn test && yarn lint",
     "publish-packages": "./scripts/publish",
