--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,13 @@ jobs:
 
       - restore_cache:
           keys:
-          - global-deps-{{ checksum "package-lock.json" }}
-          - global-deps-
+            - global-deps-{{ checksum "package-lock.json" }}
+            - global-deps-
 
       - restore_cache:
           keys:
-          - regl-worldview-deps-{{ checksum "packages/regl-worldview/package-lock.json" }}
-          - regl-worldview-deps-
+            - regl-worldview-deps-{{ checksum "packages/regl-worldview/package-lock.json" }}
+            - regl-worldview-deps-
 
       - run: npm run bootstrap
 
@@ -31,6 +31,10 @@ jobs:
       - run:
           name: "npm run lint"
           command: npm run lint
+
+      - run:
+          name: "npm run flow"
+          command: "npm run flow"
 
       - run:
           name: "npm test"
