Fix the building of regl-worldview (#15)
I broke this earlier when updating babel.config.js. Looks like this
fixes it. I wonder if we can further simplify the rollup config, but
for now I’m going to leave it at this.

Test plan: added build step to Circle CI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,7 @@ jobs:
       - run:
           name: "npm test"
           command: npm test
+
+      - run:
+          name: "npm run build"
+          command: npm run build
