--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -32,7 +32,6 @@
     "normalize-wheel": "1.0.1",
     "react-container-dimensions": "1.3.3",
     "regl": "^1.3.1",
-    "reselect": "^3.0.1",
-    "styled-components": "^3.3.0"
+    "reselect": "^3.0.1"
   }
 }
