--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "flow-copy-source": "^2.0.2",
     "flow-mono-cli": "^1.4.3",
     "flow-typed": "^2.5.1",
+    "gh-pages": "^2.0.1",
     "gl-matrix": "^2.8.1",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
@@ -88,14 +89,13 @@
   "dependencies": {},
   "scripts": {
     "bootstrap": "npm install && lerna exec npm install",
-    "build": "lerna run build",
+    "build": "lerna run build && webpack",
     "watch": "lerna run watch --parallel",
     "clean": "lerna run clean",
     "lint": "eslint . --max-warnings=0 &&  prettier -l '**/*.css' --ignore-path .eslintignore",
     "lint:fix": "eslint . --fix && prettier --write '**/*.css' --ignore-path .eslintignore",
     "test": "NODE_ENV=test jest --config jest/jest.config.js",
     "link": "lerna link --force-local",
-    "docs": "webpack-dev-server",
     "update-version": "lerna publish --skip-git --skip-npm --force-publish '*'",
     "check-packages": "yarn clean && yarn compile && yarn test && yarn lint",
     "publish-packages": "./scripts/publish",
@@ -103,7 +103,9 @@
     "build-storybook": "build-storybook",
     "flow": "flow",
     "flow-mono": "flow-mono create-symlinks ./dist/.flowconfig",
-    "flow-mono-install": "flow-mono install-types"
+    "flow-mono-install": "flow-mono install-types",
+    "docs": "webpack-dev-server",
+    "docs-deploy": "gh-pages -d docs/public"
   },
   "workspaces": [
     "packages/*"
