Remove some unused packages (#20)
And add some that were missing. And also made it so docs open in a
browser just like storybook.

Test plan: covered by CI, manually checked storybook and docs.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             - regl-worldview-deps-{{ checksum "packages/regl-worldview/package-lock.json" }}
             - regl-worldview-deps-
 
-      - run: npm run bootstrap
+      - run: npm run install-ci
 
       - save_cache:
           paths: ["node_modules"]
