--- a/package.json
+++ b/package.json
@@ -5,40 +5,32 @@
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@mdx-js/loader": "^0.16.6",
-    "@mdx-js/mdx": "^0.16.6",
     "@storybook/addon-actions": "^4.0.12",
     "@storybook/addon-knobs": "^4.0.12",
     "@storybook/addon-links": "^4.0.12",
     "@storybook/addons": "^4.0.12",
     "@storybook/react": "^4.0.12",
+    "autoprefixer": "^9.4.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-flow": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "^2.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-problems": "^2.0.0",
-    "eslint-config-react-app": "^3.0.5",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-import-order-alphabetical": "0.0.1",
     "eslint-plugin-jest": "^22.0.1",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.88.0",
@@ -47,36 +39,29 @@
     "flow-typed": "^2.5.1",
     "gh-pages": "^2.0.1",
     "gl-matrix": "^2.8.1",
-    "husky": "^1.2.0",
     "jest": "^23.6.0",
     "lerna": "^3.4.3",
     "lodash": "^4.17.11",
     "nearley-loader": "^2.0.0",
     "polygon-generator": "^1.1.2",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "prettier": "1.15.2",
     "raw-loader": "^1.0.0",
     "react": "^16.7.0-alpha.2",
-    "react-app-rewired": "^1.6.2",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.7.0-alpha.2",
     "react-live": "^1.12.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
     "react-svg-loader": "^2.1.0",
-    "react-test-renderer": "^16.7.0-alpha.2",
     "react-virtualized-select": "^3.1.3",
-    "regl-worldview": "0.0.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-filesize": "^5.0.1",
-    "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.3",
     "rollup-plugin-replace": "^2.1.0",
     "sass-loader": "^7.1.0",
     "seedrandom": "^2.4.4",
@@ -84,11 +69,13 @@
     "styled-components": "^4.1.2",
     "terser-webpack-plugin": "^1.1.0",
     "url-loader": "^1.1.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {},
   "scripts": {
     "bootstrap": "npm install && lerna exec npm install",
+    "install-ci": "npm ci && lerna exec npm ci",
     "build": "lerna run build && webpack",
     "watch": "lerna run watch --parallel",
     "clean": "lerna run clean",
