--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -33,5 +33,8 @@
     "react-container-dimensions": "1.3.3",
     "regl": "^1.3.1",
     "reselect": "^3.0.1"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.89.0"
   }
 }
