Generate screenshots of stories (#26)
This is an intermediate step before adding
https://github.com/reg-viz/reg-suit for screenshot tests.

I did a few other things in this PR:
- Moved inScreenshotTests files to the stories directory as we can now
  share code.
- When doing that I ran into an issue of eslint not liking the dot in
  `.storybook` imports, so I renamed that directory to `stories`. Bonus:
  this directory now gets properly linted!
- Also I had to add the root directory to webpack.config.js to be able
  to refer to `storybook/inScreenshotTests`.
- And when doing that I discovered that eslint-import-resolver-webpack
  didn’t pick up the root webpack.config.js properly in some cases, so
  I had to change .eslintrc.yml to .eslintrc.js so I could use __dirname
  to explicitly point to the right file.

Also I had to add the withScreenshots decorator to every story.

Test plan: tested locally; verified that it runs in CI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,9 @@
+# Copyright (c) 2018-present, GM Cruise LLC
+#
+# This source code is licensed under the Apache License, Version 2.0,
+# found in the LICENSE file in the root directory of this source tree.
+# You may not use this file except in compliance with the License.
+
 # See https://circleci.com/docs/2.0/language-javascript/
 version: 2
 jobs:
@@ -43,6 +49,10 @@ jobs:
       - run:
           name: "npm run build"
           command: npm run build
+
+      - run:
+          name: "npm run screenshot-ci"
+          command: npm run screenshot-ci
 
       - add_ssh_keys:
           fingerprints:
