--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rollup-plugin-replace": "^2.1.0",
     "sass-loader": "^7.1.0",
     "seedrandom": "^2.4.4",
+    "storybook-chrome-screenshot": "^1.4.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.2",
     "terser-webpack-plugin": "^1.1.0",
@@ -86,13 +87,16 @@
     "update-version": "lerna publish --skip-git --skip-npm --force-publish '*'",
     "check-packages": "npm run clean && lerna run compile && npm run test && npm run lint",
     "publish-packages": "./scripts/publish",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006 -c stories",
+    "build-storybook": "build-storybook -c stories",
     "flow": "flow",
     "flow-typed-rebuild": "rm -rf flow-typed/ && flow-typed install && flow-typed install --rootDir packages/regl-worldview",
     "docs": "webpack-dev-server",
     "docs-deploy": "gh-pages -d docs/public",
-    "publish": "lerna run clean && lerna run build && lerna publish"
+    "publish": "lerna run clean && lerna run build && lerna publish",
+    "screenshot": "NODE_ENV=development storybook-chrome-screenshot -c stories --parallel 8",
+    "screenshot-ci": "npm run screenshot --puppeteer-launch-config '{\"executablePath\": \"/usr/bin/google-chrome\", \"headless\": false, \"args\":[\"--use-gl=swiftshader\", \"--no-sandbox\",\"--disable-setuid-sandbox\", \"--disable-dev-shm-usage\", \"--headless\", \"--mute-audio\"]}'",
+    "screenshot-debug": "npm run screenshot --puppeteer-launch-config '{\"headless\": false}' --parallel 1 --debug"
   },
   "workspaces": [
     "packages/*"
