--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.esm.js",
+  "unpkg": "dist/index.umd.js",
   "files": [
     "src",
     "dist",
