Fix screenshot tests not working properly [EP-4055] (#30)
I wasn’t able to get WebGL working in a CircleCI docker container, not
even when pointing it to our custom image for which I included a
Dockerfile.

I was only able to make it work when using `machine: true` and then
running Docker directly. This is slightly slower but still pretty fast,
and gives us most control over how Docker is run.

Test plan: exported the screenshots as CircleCI artifacts so we can look
at them until we have reg-suit or so set up (for which we’re blocked on
getting an S3 bucket).

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,10 @@
 # found in the LICENSE file in the root directory of this source tree.
 # You may not use this file except in compliance with the License.
 
-# See https://circleci.com/docs/2.0/language-javascript/
 version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/node:11-browsers
+    machine: true
 
     steps:
       - checkout
@@ -18,46 +16,28 @@ jobs:
           keys:
             - global-deps-{{ checksum "package-lock.json" }}
             - global-deps-
-
       - restore_cache:
           keys:
             - regl-worldview-deps-{{ checksum "packages/regl-worldview/package-lock.json" }}
             - regl-worldview-deps-
 
-      - run: npm run install-ci
+      - run: docker run -v `pwd`:`pwd` -w `pwd` -it --rm cruise/webviz-ci:0.0.2 npm run ci
 
       - save_cache:
           paths: ["node_modules"]
           key: global-deps-{{ checksum "package-lock.json" }}
-
       - save_cache:
           paths: ["packages/regl-worldview/node_modules"]
           key: regl-worldview-deps-{{ checksum "packages/regl-worldview/package-lock.json" }}
 
-      - run:
-          name: "npm run lint"
-          command: npm run lint
+      # Store artifacts
+      - store_artifacts:
+          path: __screenshots__
 
-      - run:
-          name: "npm run flow"
-          command: "npm run flow"
-
-      - run:
-          name: "npm test"
-          command: npm test
-
-      - run:
-          name: "npm run build"
-          command: npm run build
-
-      - run:
-          name: "npm run screenshot-ci"
-          command: npm run screenshot-ci
-
+      # Deploy when on master branch
       - add_ssh_keys:
           fingerprints:
             - "d5:b8:7b:18:02:16:f1:90:6c:6d:34:b7:71:55:ae:b4"
-
-      - run:
+      - deploy:
           name: "deploy docs if on master"
           command: if [ $CIRCLE_BRANCH = "master" ]; then git config --global user.email "$GH_EMAIL" && git config --global user.name "$GH_NAME" && npm run docs-deploy; fi
