--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "flow-typed": "^2.5.1",
     "gh-pages": "^2.0.1",
     "gl-matrix": "^2.8.1",
+    "history": "^4.7.2",
     "jest": "^23.6.0",
     "lerna": "^3.4.3",
     "lodash": "^4.17.11",
