Simplify Worldview by updating a few defaults (#35)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "editor.formatOnSave": true,
   "eslint.autoFixOnSave": true,
   "flow.useNPMPackagedFlow": true,
-  "javascript.validate.enable": false
+  "javascript.validate.enable": false,
+  "files.associations": {
+    "*.mdx": "markdown"
+  }
 }
