--- a/.flowconfig
+++ b/.flowconfig
@@ -9,6 +9,9 @@ dist
 [lints]
 
 [options]
+# Cheap workaround to make flow typechecking work across packages in the monorepo
+module.system.node.resolve_dirname=node_modules
+module.system.node.resolve_dirname=packages
 
 [strict]
 
