--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-router-dom": "^4.3.1",
     "react-svg-loader": "^2.1.0",
     "react-virtualized-select": "^3.1.3",
+    "retext": "^6.0.1",
+    "retext-smartypants": "^3.0.2",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^4.0.3",
@@ -72,6 +74,7 @@
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.2",
     "terser-webpack-plugin": "^1.1.0",
+    "unist-util-visit": "^1.4.0",
     "url-loader": "^1.1.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
