--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "raw-loader": "^1.0.0",
     "react": "^16.7.0-alpha.2",
     "react-container-dimensions": "^1.4.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.7.0-alpha.2",
     "react-live": "^1.12.0",
     "react-router": "^4.3.1",
