Bunch of small improvements to static pages (#55)
The biggest improvement is a new landing page that links to webviz-core
tool, Worldview docs, and Github.

Besides that I made a bunch of small improvements:
- Updated READMEs and made them all consistent with each other (same
  headlines and formatting and stuff).
- Added link and screenshot of basic example to regl-worldview README.
- Split out “Commands” section out of “API” section.
- Lots of minor language / docs improvements in regl-worldview docs.
- Fixed a bunch of broken links in docs.
- Made some example look better.
- Removed some unused scripts from package.json
- Fixed `docs-deploy` when it runs on CI (didn’t have a problem with
  `cp -f` and symlinks locally but on CI it doesn’t work).

--- a/package.json
+++ b/package.json
@@ -99,19 +99,17 @@
     "build": "lerna run build && webpack",
     "watch": "lerna run watch --parallel",
     "clean": "lerna run clean",
-    "lint": "eslint . --max-warnings=0 &&  prettier -l '**/*.css' --ignore-path .eslintignore",
+    "lint": "eslint . --max-warnings=0 && prettier -l '**/*.css' --ignore-path .eslintignore",
     "lint:fix": "eslint . --fix && prettier --write '**/*.css' --ignore-path .eslintignore",
     "test": "NODE_ENV=test jest --config jest/jest.config.js",
     "link": "lerna link --force-local",
     "update-version": "lerna publish --skip-git --skip-npm --force-publish '*'",
-    "check-packages": "npm run clean && lerna run compile && npm run test && npm run lint",
-    "publish-packages": "./scripts/publish",
     "storybook": "start-storybook -p 6006 -c stories",
     "build-storybook": "build-storybook -c stories",
     "flow": "flow",
     "flow-typed-rebuild": "rm -rf flow-typed/ && flow-typed install && flow-typed install --rootDir packages/@cruise-automation/button && flow-typed install --rootDir packages/@cruise-automation/tooltip && flow-typed install --rootDir packages/react-key-listener && flow-typed install --rootDir packages/regl-worldview",
     "docs": "DEV_SERVER=true webpack-dev-server",
-    "docs-deploy": "cp -r docs/public __temp_deploy__ && cp -f packages/webviz-core/public/index.html __temp_deploy__/index.html && cp -f packages/webviz-core/node_modules/wasm-lz4/wasm-lz4.wasm __temp_deploy__/dist/wasm-lz4.wasm && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
+    "docs-deploy": "cp -r docs/public __temp_deploy__ && cp --remove-destination packages/webviz-core/public/index.html __temp_deploy__/webviz-core.html && cp --remove-destination packages/webviz-core/node_modules/wasm-lz4/wasm-lz4.wasm __temp_deploy__/dist/wasm-lz4.wasm && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
     "publish": "lerna run clean && lerna run build && lerna publish",
     "screenshot": "NODE_ENV=development storybook-chrome-screenshot -c stories --parallel 8 --inject-files stories/injected.js --browser-timeout 60000",
     "screenshot-ci": "npm run screenshot -- --puppeteer-launch-config '{\"executablePath\": \"/usr/bin/google-chrome\", \"headless\": false, \"args\":[\"--use-gl=swiftshader\", \"--no-sandbox\",\"--disable-setuid-sandbox\", \"--disable-dev-shm-usage\", \"--headless\", \"--mute-audio\"]}'",
