--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jest": "^22.0.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "0.0.0",
     "flow-bin": "0.80.0",
     "flow-copy-source": "^2.0.2",
     "flow-typed": "2.5.1",
