--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -25,6 +25,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "earcut": "^2.1.3",
     "gl-matrix": ">=2.6.1",
     "lodash": "^4.17.11",
