--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "postcss-loader": "^3.0.0",
     "prettier": "1.15.2",
     "raw-loader": "^0.5.1",
-    "react": "^16.7.0-alpha.2",
+    "react": "^16.8.2",
     "react-container-dimensions": "^1.4.1",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.7.0-alpha.2",
+    "react-dom": "^16.8.2",
     "react-hot-loader": "^4.3.12",
     "react-live": "^1.12.0",
     "react-router": "^4.3.1",
