--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -37,5 +37,9 @@
   "devDependencies": {
     "flow-bin": "0.80.0"
   },
+  "peerDependencies": {
+    "react": "16.x",
+    "react-dom": "16.x"
+  },
   "gitHead": "a799782ff908186f8c42c37f39806d251922ca6e"
 }
