Fix Overlay so it doesn't flow outside of Worldview by default  (#92)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
   "javascript.validate.enable": false,
   "files.associations": {
     "*.mdx": "markdown"
+  },
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": false
   }
 }
