Update packages/webviz-core from internal repo (update to React 16.8) (#117)
Updating to React 16.8 and removing `react-with-hooks`.

Had to use `lerna bootstrap --hoist` to avoid issues with hooks arising from jest vs our code importing two different instances of React.

## Test plan

Mostly unit tests with a bit of manual testing.

## Versioning impact

None, not changing public API

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "babel-loader": "^8.0.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "^1.0.1",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-problems": "^2.0.0",
@@ -58,11 +58,11 @@
     "postcss-loader": "^3.0.0",
     "prettier": "1.15.2",
     "raw-loader": "^0.5.1",
-    "react": "^16.8.2",
+    "react": "16.8.6",
     "react-container-dimensions": "^1.4.1",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.2",
-    "react-hot-loader": "^4.3.12",
+    "react-dom": "16.8.6",
+    "react-hot-loader": "4.8.2",
     "react-live": "^1.12.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -97,11 +97,12 @@
   },
   "dependencies": {},
   "scripts": {
-    "bootstrap": "npm install && lerna exec npm install",
-    "install-ci": "npm ci && lerna exec npm ci",
+    "bootstrap": "npm install && lerna bootstrap --hoist react",
+    "install-ci": "npm ci && lerna bootstrap --hoist react",
     "build": "lerna run build && webpack",
     "watch": "lerna run watch --parallel",
     "clean": "lerna run clean",
+    "lerna": "lerna",
     "lint": "eslint . --max-warnings=0 && prettier -l '**/*.css' --ignore-path .eslintignore",
     "lint:fix": "eslint . --fix && prettier --write '**/*.css' --ignore-path .eslintignore",
     "test": "NODE_ENV=test jest --config jest/jest.config.js",
