--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-container-dimensions": "^1.4.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16.8.6",
+    "react-hooks-testing-library": "^0.4.0",
     "react-hot-loader": "4.8.2",
     "react-live": "^1.12.0",
     "react-router": "^4.3.1",
