--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gl-matrix": "^2.8.1",
     "history": "^4.7.2",
     "jest": "^23.6.0",
-    "jest-canvas-mock": "^1.1.0",
+    "jest-canvas-mock": "^2.0.0-beta.1",
     "lerna": "^3.4.3",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
