Improve GLTF hitmap logic (#134)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "eslint.autoFixOnSave": true,
   "flow.useNPMPackagedFlow": true,
   "javascript.validate.enable": false,
+  "typescript.validate.enable": false,
   "files.associations": {
     "*.mdx": "markdown"
   },
