Update packages/webviz-core from internal repo (#148)
* Update packages/webviz-core from internal repo

Changelog:
Added support for pose markers in Webviz

* Update index.js

* Add file-loader to top level of project, not within packages

* Add change to flow config to fix flow issue for .glb module loading

--- a/.flowconfig
+++ b/.flowconfig
@@ -19,3 +19,5 @@ module.name_mapper.extension='scss' -> '<PROJECT_ROOT>/packages/webviz-core/src/
 module.name_mapper.extension='md' -> '<PROJECT_ROOT>/packages/webviz-core/src/types/modules/Markdown.js.flow'
 module.name_mapper.extension='ne' -> '<PROJECT_ROOT>/packages/webviz-core/src/types/modules/Nearley.js.flow'
 module.name_mapper.extension='worker.js' -> '<PROJECT_ROOT>/packages/webviz-core/src/types/modules/WorkerLoader.js.flow'
+
+module.file_ext=.glb
