--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -29,6 +29,7 @@
     "earcut": "^2.1.3",
     "gl-matrix": ">=2.6.1",
     "lodash": "^4.17.11",
+    "memoize-weak": "^1.0.2",
     "normalize-wheel": "1.0.1",
     "react-container-dimensions": "1.3.3",
     "regl": "^1.3.1",
