--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
+    "distance-to-line-segment": "0.2.0",
     "earcut": "^2.1.3",
     "gl-matrix": ">=2.6.1",
     "lodash": "^4.17.11",
