--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "lerna": "^3.4.3",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
+    "monaco-editor": "0.17.1",
+    "monaco-editor-webpack-plugin": "1.7.0",
     "nearley-loader": "^2.0.0",
     "node-sass": "^4.10.0",
     "polygon-generator": "^1.1.2",
