--- a/package.json
+++ b/package.json
@@ -77,6 +77,10 @@
     "react-svg-loader": "^2.1.0",
     "react-virtualized-select": "^3.1.3",
     "redux-devtools-extension": "^2.13.7",
+    "reg-notify-github-plugin": "0.7.19",
+    "reg-publish-s3-plugin": "0.7.18",
+    "reg-simple-keygen-plugin": "0.7.16",
+    "reg-suit": "0.7.17",
     "retext": "^6.0.1",
     "retext-smartypants": "^3.0.2",
     "rimraf": "^2.6.2",
@@ -124,9 +128,10 @@
     "docs-deploy": "cp -r docs/public __temp_deploy__ && cp --remove-destination packages/webviz-core/public/index.html __temp_deploy__/try/index.html && echo 'webviz.io' > __temp_deploy__/CNAME && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
     "publish": "lerna run clean && lerna run build && lerna publish",
     "screenshot": "NODE_ENV=development storybook-chrome-screenshot -c stories --parallel 8 --inject-files stories/injected.js --browser-timeout 1200000",
-    "screenshot-ci": "npm run screenshot -- --puppeteer-launch-config '{\"executablePath\": \"/usr/bin/google-chrome\", \"headless\": false, \"args\":[\"--use-gl=swiftshader\", \"--no-sandbox\",\"--disable-setuid-sandbox\", \"--disable-dev-shm-usage\", \"--headless\", \"--mute-audio\"]}'",
-    "screenshot-debug": "npm run screenshot -- --parallel 1 --debug --puppeteer-launch-config '{\"headless\": false}'",
-    "ci": "npm run install-ci && NODE_ENV=production npm run build && npm run lint && npm run flow && npm test && NODE_ENV=production npm run screenshot-ci"
+    "screenshot-ci": "npm run screenshot -- --puppeteer-launch-config '{\"executablePath\": \"/usr/bin/google-chrome\", \"headless\": false, \"args\":[\"--use-gl=swiftshader\", \"--no-sandbox\",\"--disable-setuid-sandbox\", \"--disable-dev-shm-usage\", \"--headless\", \"--mute-audio\", \"--user-agent=ChromePuppeteerTesting\"]}'",
+    "screenshot-debug": "npm run screenshot -- --parallel 1 --debug --puppeteer-launch-config '{\"headless\": false, \"--args\":[\"--user-agent=ChromePuppeteerTesting\"]}'",
+    "ci-commands-for-cruise-proprietary-repo": "npm run install-ci && NODE_ENV=production npm run build && npm run lint && npm run flow && npm test && NODE_ENV=production npm run screenshot-ci",
+    "ci": "npm run ci-commands-for-cruise-proprietary-repo && reg-suit run --verbose"
   },
   "workspaces": [
     "packages/*"
