Add dependency for later changes (#215)
* Add dependency for later changes

We are adding this dependency in the closed repo so that we can use
it in open source soon. Add it here too.

Test plan: none

* Update package.json

Co-Authored-By: Troy Gibb <troy.gibb@gmail.com>

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "prettier": "1.15.2",
+    "quickhull3d": "2.0.4",
     "raw-loader": "^0.5.1",
     "react": "16.8.6",
     "react-container-dimensions": "^1.4.1",
