--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "history": "^4.7.2",
     "jest": "^23.6.0",
     "jest-canvas-mock": "^2.0.0-beta.1",
+    "jest-diff": "24.9.0",
     "lerna": "^3.4.3",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
@@ -97,6 +98,7 @@
     "seedrandom": "^2.4.4",
     "sinon": "^7.1.1",
     "storybook-chrome-screenshot": "^1.4.0",
+    "strip-ansi": "5.2.0",
     "style-loader": "^0.23.1",
     "styled-components": "3.4.10",
     "terser-webpack-plugin": "^1.1.0",
