Replace custom expect library with Jest (#223)
I hadn't seen that Jest exports their own expect library that works
inside the dom before completing the integration tests. Replace
ours with theirs in the assertion stories because their error
messages are better and library is more complete.

Test plan: no screenshot changes

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "expect": "^24.9.0",
     "file-loader": "^4.0.0",
     "flow-bin": "0.106.2",
     "flow-copy-source": "^2.0.2",
@@ -98,7 +99,6 @@
     "seedrandom": "^2.4.4",
     "sinon": "^7.1.1",
     "storybook-chrome-screenshot": "^1.4.0",
-    "strip-ansi": "5.2.0",
     "style-loader": "^0.23.1",
     "styled-components": "3.4.10",
     "terser-webpack-plugin": "^1.1.0",
