Update packages/webviz-core from internal repo (#251)
Changelog:
- Fixed zoom issue in plot panel.
- Allow full-screen panel locking by holding `` ` `` + `shift` and clicking a panel.
- In the Plot panel, we now default the "timestamp method" (`receiveTime` vs `header.stamp`) to the last used value.
- Added ability to save playback speed to layout config.
- Added ability to search panels by name.
- Moved the filter feature in Diagnostic Summary panel and got rid of it in Diagnostic Detail panel.
- Fixed issue so that navigating away from a new tab before it loads will still start data loading.
- Fixed a memory leak in the 3D panel.
- Added ability to plot timestamp values in Raw Messages and Plot panels.
- Updated React to latest version.
- In tests, enabled `restoreMocks`.

--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "prettier": "1.15.2",
     "quickhull3d": "2.0.4",
     "raw-loader": "^0.5.1",
-    "react": "16.8.6",
+    "react": "16.10.2",
     "react-container-dimensions": "^1.4.1",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "16.8.6",
+    "react-dom": "16.10.2",
     "react-hooks-testing-library": "^0.4.0",
     "react-hot-loader": "4.8.2",
     "react-live": "^1.12.0",
@@ -112,8 +112,8 @@
   },
   "dependencies": {},
   "scripts": {
-    "bootstrap": "npm install && lerna bootstrap --hoist react",
-    "install-ci": "npm ci && lerna bootstrap --hoist react",
+    "bootstrap": "npm install && lerna bootstrap --hoist \"{react,react-dom}\"",
+    "install-ci": "npm ci && lerna bootstrap --hoist \"{react,react-dom}\"",
     "build": "lerna run build && webpack",
     "watch": "lerna run watch --parallel",
     "clean": "lerna run clean",
