--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -26,10 +26,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
+    "@mapbox/tiny-sdf": "^1.1.1",
     "distance-to-line-segment": "0.2.0",
     "earcut": "^2.1.3",
     "gl-matrix": ">=2.6.1",
     "lodash": "^4.17.11",
+    "memoize-one": "5.1.1",
     "memoize-weak": "^1.0.2",
     "normalize-wheel": "1.0.1",
     "react-container-dimensions": "1.3.3",
