--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -31,7 +31,7 @@
     "earcut": "^2.1.3",
     "gl-matrix": ">=2.6.1",
     "lodash": "^4.17.11",
-    "memoize-one": "5.1.1",
+    "memoize-one": "^5.1.1",
     "memoize-weak": "^1.0.2",
     "normalize-wheel": "1.0.1",
     "react-container-dimensions": "1.3.3",
