--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "seedrandom": "^2.4.4",
     "sinon": "^7.1.1",
     "storybook-chrome-screenshot": "^1.4.0",
+    "string-replace-loader": "^2.2.0",
     "style-loader": "^0.23.1",
     "styled-components": "4.4.1",
     "terser-webpack-plugin": "^1.1.0",
