--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -1,6 +1,6 @@
 {
   "name": "regl-worldview",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A reusable component for rendering 2D and 3D views using regl",
   "license": "Apache-2.0",
   "repository": "cruise-automation/webviz/tree/master/packages/regl-worldview",
@@ -36,7 +36,8 @@
     "normalize-wheel": "1.0.1",
     "react-container-dimensions": "1.3.3",
     "regl": "^1.3.1",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "shallowequal": "1.1.0"
   },
   "devDependencies": {
     "flow-bin": "0.80.0"
