--- a/package.json
+++ b/package.json
@@ -105,12 +105,12 @@
     "string-replace-loader": "^2.2.0",
     "style-loader": "^0.23.1",
     "styled-components": "4.4.1",
-    "terser-webpack-plugin": "^1.1.0",
+    "terser-webpack-plugin": "3.0.1",
     "text-encoding": "^0.7.0",
     "unist-util-visit": "^1.4.0",
     "url-loader": "^1.1.2",
     "url-search-params": "^1.1.0",
-    "webpack-cli": "^3.3.3",
+    "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.7.1",
     "worker-loader": "^2.0.0"
   },
