--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -40,8 +40,7 @@
     "shallowequal": "1.1.0"
   },
   "devDependencies": {
-    "flow-bin": "0.80.0",
-    "pako": "1.0.11"
+    "flow-bin": "0.80.0"
   },
   "peerDependencies": {
     "react": "16.x",
