--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "lerna": "^3.4.3",
     "lodash": "^4.17.11",
     "lz-string": "^1.4.4",
-    "monaco-editor": "0.17.1",
-    "monaco-editor-webpack-plugin": "1.7.0",
+    "monaco-editor": "0.20.0",
+    "monaco-editor-webpack-plugin": "1.9.0",
     "nearley-loader": "^2.0.0",
     "node-sass": "^4.10.0",
     "polygon-generator": "^1.1.2",
@@ -80,6 +80,7 @@
     "react-hooks-testing-library": "^0.4.0",
     "react-hot-loader": "4.8.2",
     "react-live": "^1.12.0",
+    "react-monaco-editor": "0.36.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-svg-loader": "^2.1.0",
