--- a/.flowconfig
+++ b/.flowconfig
@@ -32,6 +32,7 @@ module.file_ext=.jsx
 module.file_ext=.json
 module.file_ext=.glb
 module.file_ext=.bag
+module.file_ext=.wasm
 
 [lints]
 # Suppress warnings about $Subtype / $Supertype in flow-typed libdefs
