Add webviz-dev workflow (#580)
Summary
Currently we have a pretty non-intuitive way to dev on Webviz, which is via npm run docs and navigating to http://localhost:8080/app to view Webviz.

This update adds a quick hack around that, by re-tooling our Webpack config with a WEBVIZ_DEV flag that sets up all the relative paths and html-webpack-plugin.

Other things:

Added a quick update to the docs as well to reflect this new workflow.
I noticed a few javascript heap out of memory errors-- hence NODE_OPTIONS='--max-old-space-size=4096'
Test Plan
Verified things looked good locally.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gh-pages": "^2.0.1",
     "gl-matrix": "^2.8.1",
     "history": "^4.7.2",
+    "html-webpack-plugin": "^4.5.1",
     "http-server": "^0.12.3",
     "jest": "^23.6.0",
     "jest-canvas-mock": "^2.0.0-beta.1",
@@ -133,7 +134,7 @@
     "build-storybook": "build-storybook -c stories",
     "flow": "flow",
     "flow-typed-rebuild": "rm -rf flow-typed/ && flow-typed install && flow-typed install --rootDir packages/@cruise-automation/hooks && flow-typed install --rootDir packages/@cruise-automation/button && flow-typed install --rootDir packages/@cruise-automation/tooltip && flow-typed install --rootDir packages/regl-worldview",
-    "docs": "DEV_SERVER=true webpack-dev-server",
+    "docs-dev": "NODE_OPTIONS='--max-old-space-size=4096' DEV_SERVER=true webpack-dev-server",
     "docs-deploy": "cp -r docs/public __temp_deploy__ && rm __temp_deploy__/app/index.html && cp packages/webviz-core/public/index.html __temp_deploy__/app/index.html && echo 'webviz.io' > __temp_deploy__/CNAME && gh-pages -d __temp_deploy__ && rm -rf __temp_deploy__",
     "publish": "lerna run clean && lerna run build && lerna publish",
     "build-static-webviz": "lerna run build && rm -rf __static_webviz__ && cp -r docs/public/app __static_webviz__ && rm __static_webviz__/index.html && cp packages/webviz-core/public/index.html __static_webviz__/index.html && sed -i -- 's/\\/dist\\/webvizCoreBundle.js/webvizCoreBundle.js/' __static_webviz__/index.html && NODE_ENV=production STATIC_WEBVIZ=true webpack",
@@ -146,6 +147,7 @@
     "ci-commands-base": "npm run install-ci && NODE_ENV=production npm run build && packages/webviz-core/script/record-local-bag-video.js --help && npm run lint && npm run flow && npm test && integration-tests/install-ffmpeg-in-docker.sh && integration-tests/record-video-and-extract-screenshot.sh",
     "ci-commands-for-cruise-open-source-repo": "npm run ci-commands-base && NODE_ENV=production npm run screenshot-ci",
     "ci-commands-for-cruise-proprietary-repo": "npm run ci-commands-base && NODE_ENV=production npm run screenshot-proprietary-ci",
-    "ci": "npm run ci-commands-for-cruise-open-source-repo && reg-suit run --verbose"
+    "ci": "npm run ci-commands-for-cruise-open-source-repo && reg-suit run --verbose",
+    "webviz-dev": "NODE_OPTIONS='--max-old-space-size=4096' DEV_SERVER=true WEBVIZ_DEV=true webpack-dev-server"
   }
 }
