Add support for Draco-compressed GLTF files (#640)
GLTF supports binary data compression by using the Draco extension.

If a mesh contains compressed data, we need to decode each of its buffers using the tools provided by the Draco3D library. Once decoded, the buffers will be stored inside the primitive (instead of using the global accessors).

As a side effect of these changes, I had to upgrade Rollup to the latest version in order to support wasm modules.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dump247/storybook-state": "^1.5.2",
     "@mapbox/rehype-prism": "^0.3.0",
     "@mdx-js/loader": "^0.16.6",
+    "@rollup/plugin-wasm": "^5.1.2",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
@@ -94,7 +95,7 @@
     "retext": "^6.0.1",
     "retext-smartypants": "^3.0.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.3",
+    "rollup": "^2.48.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-copy": "^0.2.3",
