--- a/packages/regl-worldview/package.json
+++ b/packages/regl-worldview/package.json
@@ -1,6 +1,6 @@
 {
   "name": "regl-worldview",
-  "version": "0.16.3",
+  "version": "0.17.0",
   "description": "A reusable component for rendering 2D and 3D views using regl",
   "license": "Apache-2.0",
   "repository": "cruise-automation/webviz/tree/master/packages/regl-worldview",
@@ -28,6 +28,7 @@
     "@babel/runtime": "^7.3.1",
     "@mapbox/tiny-sdf": "^1.1.1",
     "distance-to-line-segment": "0.2.0",
+    "draco3d": "^1.4.1",
     "earcut": "^2.1.3",
     "gl-matrix": ">=2.6.1",
     "lodash": "^4.17.11",
